# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  configuration.yml  spec.yml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yml  local.yml  production.yml
migrations/: 20230330011330_make_status_column_not_null.sql  20230513163549_create_issue_delivery_queue_table.sql
scripts/: docker_build.sh  init_db.sh  launch_redis.sh  start_local_db.sh  update-deploy.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription_confirmation.rs  subscriptions.rs  subscriptions_confirm.rs
