[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
argon2 = { version = "0.4", features = ["std"] }
anyhow = "1"
base64 = "0.21"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
htmlescape = "0.3"
rand = { version = "0.8", features=["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["serde", "v4"] }
urlencoding = "2"
validator = "0.16"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["cookies", "json", "rustls-tls"]

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
once_cell = "1"
claims = "0.7"
fake = "~2.3"
linkify = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
